test-suite/tests/snapshots/cli_kpk_tests__kpk_manifest_parse_error.snap
---
source: test-suite/tests/cli_kpk_tests.rs
expression: result.stderr
---
KPK9001

  × TOML parse error at line 3, column 9
  │   |
  │ 3 | [package
  │   |         ^
  │ unclosed table, expected `]`
  │
